# xplane-scenery-builder

./: .gitignore  Makefile  README.md  REQUIREMENTS.md  pyproject.toml
.kiro/steering/: build-standards.md
assets/: catalog.yaml  facade_attributes.yaml
docs/: architecture.drawio  asset-catalog.md  backlog.md  llm-annotation-design.md  session-knowledge.md  xp12-asset-inventory.md
scripts/: analyze_facades.py
src/xplane_gen/: buildings.py  catalog.py  classifier.py  cli.py  dsf.py  geocode.py  landcover.py  ndvi.py  ortho.py  osm.py  pipeline.py  review.py  subset.py
tests/: test_buildings.py  test_catalog.py  test_classifier.py  test_dsf.py  test_landcover.py  test_ndvi.py  test_ortho.py  test_osm.py  test_pipeline.py  test_review.py
