[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xplane-gen"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "rich>=13",
    "overpy>=0.7",
    "shapely>=2.0",
    "rasterio>=1.3",
    "numpy>=1.26",
    "boto3>=1.34",
    "pystac-client>=0.7",
    "pyproj>=3.6",
    "pyyaml>=6.0",
]

[project.scripts]
xplane-gen = "xplane_gen.cli:cli"

[dependency-groups]
dev = ["pytest>=8", "pytest-mock>=3.12", "ruff>=0.9", "mypy>=1.11", "types-shapely>=2.0", "types-PyYAML>=6.0"]
pbf = ["osmium>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = [
    "overpy",
    "rasterio",
    "rasterio.features",
    "rasterio.mask",
    "rasterio.transform",
    "rasterio.crs",
    "rasterio.warp",
    "xplane_gen.landcover",
    "xplane_gen.pipeline",
    "xplane_gen.catalog",
    "xplane_gen.review",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
